2001-02-25  Greg Freemyer <freemyer@NorcrossGroup.com>

	* libmath/mathconf.h (GET_LDOUBLE_MSW64): Fix thinko.

2001-02-23  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/codecvt.h: Use __builtin_alloca.
	* include/bits/ostream.tcc: Same.
	* include/bits/fstream.tcc: Same.

2001-02-23  Alexandre Oliva <aoliva@redhat.com>

	* mknumeric_limits (CC): Use VAR=${VAR=...} form.

2001-02-23  David Edelsohn <dje@watson.ibm.com>

	* mknumeric_limits (CC): Use $BUILD_DIR/../../gcc/xgcc

2001-02-23  Phil Edwards  <pme@sources.redhat.com>

	c++/2052
	* include/backward/iostream.h:  Expose std::flush in old headers.

2001-02-23  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* mknumeric_limits: Remove special-casing on target.  Use gcc
	instead of g++ to build gen-num-limits.cc

2001-02-22  Benjamin Kosnik  <bkoz@redhat.com>

	* tests_flags.in (CXXFLAGS): Add -rpath to gcc build dir.

	* include/bits/codecvt.h: Use alloca instead of __extension__ for
	the time being.
	* include/bits/ostream.tcc: Same.
	* include/bits/std_ostream.h: Same.
	* include/bits/fstream.tcc: Same.
	* include/bits/locale_facets.tcc: Add typename.
	* include/bits/c++config (_GLIBCPP_FULLY_COMPLIANT_HEADERS): Enable.

2001-02-21  Phil Edwards  <pme@sources.redhat.com>

	* tests_flags.in:  Remove -n flag from call to echo.

2001-02-20  Benjamin Kosnik  <bkoz@redhat.com>

	* config/c_locale_gnu.h: Add clocale include.

2001-02-20  Phil Edwards  <pme@sources.redhat.com>

	* include/bits/stl_config.h:  Remove file.
	* src/Makefile.am (base_headers):  Remove from list.
	* configure:  Regenerate.
	* Makefile.in:  Ditto.
	* libio/Makefile.in:  Ditto.
	* libmath/Makefile.in:  Ditto.
	* libsupc++/Makefile.in:  Ditto.
	* src/Makefile.in:  Ditto.

	* include/bits/c++config:  Move relevant macros to here.
	* include/backward/alloc.h:  Include c++config.h instead.
	* include/backward/function.h:  Ditto.
	* include/backward/heap.h:  Ditto.
	* include/backward/pair.h:  Ditto.